# diso

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yaml
src/: diso_checksum.hpp  diso_error.hpp  diso_utils.hpp  main.cpp
