cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
project(diso C CXX)

set (THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
find_library(DLPATH NAMES libdl.so dl)
find_library(RESOLV_PATH NAMES libresolv.so resolv)

if(UNIX AND APPLE)
    set(ARIA2_TRIPLET "${CMAKE_HOST_SYSTEM_PROCESSOR}-apple-darwin")
elseif(UNIX AND NOT APPLE)
    if("${CMAKE_HOST_SYSTEM_PROCESSOR}" EQUAL "arm")
        set(ARIA2_TRIPLET "${CMAKE_HOST_SYSTEM_PROCESSOR}-linux-gnueabihf")
    else()
        set(ARIA2_TRIPLET "${CMAKE_HOST_SYSTEM_PROCESSOR}-linux-gnu")
    endif()
else()
    message(FATAL "Platform not supported")
endif()

if(NOT EXISTS "${CMAKE_CURRENT_BINARY_DIR}/usr/local/bin")
    if(NOT EXISTS "${CMAKE_CURRENT_BINARY_DIR}/aria2-deps-${ARIA2_TRIPLET}.tar.gz")
        file(DOWNLOAD "https://github.com/uwulab/aria2-deps/releases/download/v20231028/aria2-deps-${ARIA2_TRIPLET}.tar.gz" "${CMAKE_CURRENT_BINARY_DIR}/aria2-deps-${ARIA2_TRIPLET}.tar.gz" SHOW_PROGRESS)
    endif()
    file(ARCHIVE_EXTRACT INPUT "${CMAKE_CURRENT_BINARY_DIR}/aria2-deps-${ARIA2_TRIPLET}.tar.gz" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
endif()
set(ARIA2_DEPS_ROOT "${CMAKE_CURRENT_BINARY_DIR}")

find_package(PkgConfig REQUIRED)
set(PKG_CONFIG_LIBDIR "${ARIA2_DEPS_ROOT}/usr/local/lib")
set(PKG_CONFIG_PATH "${ARIA2_DEPS_ROOT}/usr/local/lib/pkgconfig")
set(PKG_CONFIG_LIBDIR_64 "${ARIA2_DEPS_ROOT}/usr/local/lib64")
set(PKG_CONFIG_PATH_64 "${ARIA2_DEPS_ROOT}/usr/local/lib64/pkgconfig")
set(ENV{PKG_CONFIG_LIBDIR} "${PKG_CONFIG_LIBDIR}:${PKG_CONFIG_LIBDIR_64}")
set(ENV{PKG_CONFIG_PATH} "${PKG_CONFIG_PATH}:${PKG_CONFIG_PATH_64}")

set(LIBSSH2_PC "${PKG_CONFIG_PATH}/libssh2.pc")
file(STRINGS ${LIBSSH2_PC} LIBSSH2_PC_FILE)
set(LIBSSH2_PC_FILE_PATCHED "${LIBSSH2_PC}.patched")
file(REMOVE ${LIBSSH2_PC_FILE_PATCHED})
while(LIBSSH2_PC_FILE)
    list(POP_FRONT LIBSSH2_PC_FILE LINE)
    string(REPLACE "/Users/runner/work/aria2-deps/aria2-deps/deps/openssl/" "/" REPLACED_LINE "${LINE}")
    file(APPEND "${LIBSSH2_PC_FILE_PATCHED}" "${REPLACED_LINE}\n")
endwhile()
file(RENAME ${LIBSSH2_PC_FILE_PATCHED} ${LIBSSH2_PC})

pkg_check_modules(PKG_ARIA2 REQUIRED libaria2)
pkg_check_modules(PKG_LIBXML2 REQUIRED libxml-2.0)
pkg_check_modules(PKG_OpenSSL REQUIRED openssl)
pkg_check_modules(PKG_LIBSSH2 REQUIRED libssh2)
pkg_check_modules(PKG_LIBCARES REQUIRED libcares)
pkg_check_modules(PKG_SQLITE3 REQUIRED sqlite3)
pkg_check_modules(PKG_ZLIB REQUIRED zlib)

set(PKG_ARIA2_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_ARIA2_INCLUDE_DIRS}")
set(PKG_LIBXML2_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBXML2_INCLUDE_DIRS}")
set(PKG_OpenSSL_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_OpenSSL_INCLUDE_DIRS}")
set(PKG_LIBSSH2_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBSSH2_INCLUDE_DIRS}")
set(PKG_LIBCARES_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBCARES_INCLUDE_DIRS}")
set(PKG_SQLITE3_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_SQLITE3_INCLUDE_DIRS}")
set(PKG_ZLIB_INCLUDE_DIRS "${ARIA2_DEPS_ROOT}${PKG_ZLIB_INCLUDE_DIRS}")

set(PKG_ARIA2_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_ARIA2_LIBRARY_DIRS}")
set(PKG_LIBXML2_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBXML2_LIBRARY_DIRS}")
set(PKG_OpenSSL_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_OpenSSL_LIBRARY_DIRS}")
set(PKG_LIBSSH2_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBSSH2_LIBRARY_DIRS}")
set(PKG_LIBCARES_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_LIBCARES_LIBRARY_DIRS}")
set(PKG_SQLITE3_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_SQLITE3_LIBRARY_DIRS}")
set(PKG_ZLIB_LIBRARY_DIRS "${ARIA2_DEPS_ROOT}${PKG_ZLIB_LIBRARY_DIRS}")

set(CMAKE_CXX_STANDARD 23)
add_executable(diso
    "src/main.cpp"
)
target_include_directories(diso PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/3rd_party")
target_include_directories(diso PUBLIC
    ${PKG_ARIA2_INCLUDE_DIRS}
    ${PKG_LIBXML2_INCLUDE_DIRS}
    ${PKG_OpenSSL_INCLUDE_DIRS}
    ${PKG_LIBSSH2_INCLUDE_DIRS}
    ${PKG_LIBCARES_INCLUDE_DIRS}
    ${PKG_SQLITE3_INCLUDE_DIRS}
    ${PKG_ZLIB_INCLUDE_DIRS}
)
target_link_directories(diso PUBLIC
    ${PKG_ARIA2_LIBRARY_DIRS}
    ${PKG_LIBXML2_LIBRARY_DIRS}
    ${PKG_OpenSSL_LIBRARY_DIRS}
    ${PKG_LIBSSH2_LIBRARY_DIRS}
    ${PKG_LIBCARES_LIBRARY_DIRS}
    ${PKG_SQLITE3_LIBRARY_DIRS}
    ${PKG_ZLIB_LIBRARY_DIRS}
)
target_link_libraries(diso
    ${PKG_ARIA2_LIBRARIES}
    ${PKG_LIBXML2_LIBRARIES}
    ${PKG_OpenSSL_LIBRARIES}
    ${PKG_LIBSSH2_LIBRARIES}
    ${PKG_LIBCARES_LIBRARIES}
    ${PKG_SQLITE3_LIBRARIES}
    ${PKG_ZLIB_LIBRARIES}
    Threads::Threads
    ${DLPATH}
    ${RESOLV_PATH}
)
target_compile_options(diso PUBLIC
    ${PKG_ARIA2_CFLAGS_OTHER}
    ${PKG_LIBXML2_CFLAGS_OTHER}
    ${PKG_OpenSSL_CFLAGS_OTHER}
    ${PKG_LIBSSH2_CFLAGS_OTHER}
    ${PKG_LIBCARES_CFLAGS_OTHER}
    ${PKG_SQLITE3_CFLAGS_OTHER}
    ${PKG_ZLIB_CFLAGS_OTHER}
)

if(UNIX AND NOT APPLE)
    set_target_properties(diso PROPERTIES INSTALL_RPATH "\$ORIGIN/lib:\$ORIGIN/lib64")
elseif(UNIX AND APPLE)
    set_target_properties(diso PROPERTIES INSTALL_RPATH "@loader_path/lib")
endif()

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -ldl")

if(WIN32)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj /wd4996 /wd4267 /wd4068")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
    if (UNIX AND APPLE)
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -framework CoreFoundation -framework Security -lz")
    endif()
    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g3")
    else()
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
    endif()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-function -Wno-sign-compare -Wno-unused-parameter -Wno-missing-field-initializers -Wno-deprecated-declarations")
endif()
